Fix button sizes on smaller screen

--- a/app/User Contact Management System/src/screens/users/Home/styles.module.scss
+++ b/app/User Contact Management System/src/screens/users/Home/styles.module.scss
@@ -207,27 +207,27 @@
 
 			/* For screens with a maximum width of 575px */
 			@media only screen and (max-width: 575px) {
-				font-size: 0.3em !important;
+				font-size: 0.6em !important;
 			}
 
 			/* For screens with a minimum width of 575px */
 			@media only screen and (min-width: 575px) {
-				font-size: 0.4em !important;
+				font-size: 0.7em !important;
 			}
 
 			/* For screens with a minimum width of 767px */
 			@media only screen and (min-width: 767px) {
-				font-size: 0.5em !important;
+				font-size: 0.8em !important;
 			}
 
 			/* For screens with a minimum width of 991px */
 			@media only screen and (min-width: 991px) {
-				font-size: 0.6em !important;
+				font-size: 0.9em !important;
 			}
 
 			/* For screens with a minimum width of 1200px */
 			@media only screen and (min-width: 1200px) {
-				font-size: 0.7em !important;
+				font-size: 1em !important;
 			}
 
 			/* For screens with a minimum width of 1400px */
